Refactor to use async/await.  JS as module.  Removed excess drive permissions.  New gtag.

--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,9 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+# debugging mode
+# default_expiration: "1s"
+
 skip_files:
   - ^(.*/)?#.*#$
   - ^(.*/)?.*~$
