--- a/.gcloudignore
+++ b/.gcloudignore
@@ -72,7 +72,16 @@ nb-configuration.xml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.git
+.git/**
+.gcloudignore
+.gitignore
+
 /target/
 /nbproject/
 .DS_Store
-/.idea/
+app.yaml
+CONTRIBUTING.md
+LICENSE
+README.md
+.idea/**
