--- a/app.yaml
+++ b/app.yaml
@@ -1,24 +1,11 @@
 # application: ezgantt
 # version: 1
-runtime: python27
-api_version: 1
-threadsafe: true
-
-# debugging mode
-# default_expiration: "1s"
-
-skip_files:
-  - ^(.*/)?#.*#$
-  - ^(.*/)?.*~$
-  - ^(.*/)?.*\.py[co]$
-  - ^(.*/)?.*/RCS/.*$
-  - ^(.*/)?\..*$
-  - ^(.*/)?\.libsvm$
-  - ^(.*/)?\.jar$
-  - .*\bIcon\b.*
-  - ^(.*/)?.*/old/.*$
+runtime: python38
 
 handlers:
+  - url: /main.py
+    script: auto
+
   - url: /
     static_files: website/index.html
     upload: website/index\.html
@@ -34,6 +21,4 @@ handlers:
     static_dir: website/js
     secure: always
 
-builtins:
-  - appstats: on
 
